--- a/src/jamtaba/resources/jamtaba.css
+++ b/src/jamtaba/resources/jamtaba.css
@@ -7,6 +7,7 @@ FxPanel{
     /*border: 1px solid gray;*/
     background-color: rgba(0, 0, 0, 20);
     max-height: 80px;
+    border-radius: 2px;
 }
 
 FxPanelItem{
@@ -15,9 +16,32 @@ FxPanelItem{
     width: 100%;
     qproperty-alignment: AlignCenter;
     font-size: 8pt;
-    color: rgba(0, 0, 0);
+    color: rgb(255, 255, 255);
+    border-radius: 2px;
 }
 
+FxPanelItem[pluginBypassed="true"]{
+    background: rgba(0, 0, 0, 60);
+    color: rgba(60, 60, 60);
+}
+
+
+FxPanelItem > QPushButton{
+     max-width: 10px;
+     max-height: 10px;
+     border-radius: 2px;
+     border: 1px solid rgba(0, 0, 0, 80);
+     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgba(0, 0, 0, 120), stop:1 rgb(0, 0, 0, 50));
+}
+
+FxPanelItem > QPushButton:hover{
+    border: 1px solid rgba(0, 0, 0);
+    /*background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgba(0, 0, 0, 150), stop:1 rgb(0, 0, 0, 80));*/
+}
+
+FxPanelItem > QPushButton:checked{
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(90, 255, 62), stop:1 rgb(0, 175, 0));
+}
 
 FxPanelItem:hover{
     background-color: qlineargradient(x1:0, y1:0.4, x2:0, y2:1, stop:0 rgba(0, 0, 0, 50), stop:1 rgba(0, 0, 0, 70));
